@@ -5,10 +5,6 @@
 
 #include "ace/Refcounted_Auto_Ptr.h"
 
-#if !defined (__ACE_INLINE__)
-#include "ace/Refcounted_Auto_Ptr.inl"
-#endif /* __ACE_INLINE __ */
-
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
 template <class X, class ACE_LOCK>
